implemented button function Agregar

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro vehicular</title>
+    <title>Inventario</title>
 </head>
 <body>
-    <div>
+    <div id="info">
         <h1>Inventario de la tienda de abarrotes "Hoy no fío, mañana sí"</h1>
         <p>Debido al corto presupuesto con el que se construyó el sistema, este solo se limita al registro y manipulación de máximo 20 artículos.</p>
     </div>
-    <div>
+    <div id="form">
         <form>
             <h2>Registro</h2>
             <div id="field">
@@ -54,7 +54,7 @@
             </div>
         </form>
     </div>
-    <div>
+    <div id="console">
         <h2>Resultados:</h2>
     </div>
 </body>
