--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <div id="field">
                 <button type="button" id="btnAdd">Agregar</button>
                 <button type="button" id="btnSearch">Buscar</button>
-                <button type="button" id="btnCancel">Cancelar</button><br>
-                <button type="button" id="btnDelete">Eliminar</button>
+                <button type="button" id="btnDelete">Eliminar</button><br>
                 <button type="button" id="btnList">Enlistar</button>
                 <button type="button" id="btnTsil">Invertir lista</button>
+                <button type="button" id="btnInsert">Insertar</button>
             </div>
         </form>
     </div>
