correction outputs inventory functions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </form>
     </div>
-    <div id="console">
+    <div id="result">
         <h2>Resultados:</h2>
     </div>
 </body>
